OpenLDAP 2.1 Change Log

OpenLDAP 2.1.23 Engineering
	Fixed ldappasswd -y handling bug (ITS#2696)
	Added replica uri keyword (ITS#2594)
	Added replica-pidfile, replica-argsfile keywords
	Fixed portability issue in ldapsasl (ITS#2691)

OpenLDAP 2.1.22 Release
	Fixed slapd yielding select fix (ITS#2603)
	Fixed slapadd dnfree bug (ITS#2587)
	Fixed slappasswd usage help (ITS#2565)
	Fixed back-bdb filter index crash (ITS#2596)
	Build Environment
		Fixed back-ldap/meta conflict (ITS#2608)
		Fixed slapd compilation bug (ITS#2605)

OpenLDAP 2.1.21 Release
	Fixed liblber ber_get_next trickle bug (ITS#2490)
	Fixed ldapsearch -p without -h bug (ITS#2532)
	Fixed slapd option ordering bug (ITS#2217)
	Fixed slapd debug in signal handler hang (ITS#2550)
	Fixed back-bdb unindexed filter bug (ITS#2522)
	Fixed back-shell pid abandon bug (ITS#2519)
	Removed lint
	Documentation
		Misc man page updates

OpenLDAP 2.1.20 Release
	Fixed slapd idletimeout behavior (ITS#2374)
	Fixed slapd accept() fail busyloop (ITS#2482)
	Fixed slapd regex lookup mutex issue (ITS#2505)
	Fixed back-bdb/ldbm filter indexing bugs (ITS#2506) (ITS#2507)
	Fixed back-bdb cache consistency bug (ITS#2470)
	Fixed libldap ldap_get_attribute_ber bug
	Documentation
		Misc man page updates

OpenLDAP 2.1.19 Release
	Fixed slapd substring index normalization (ITS#2468)
	Fixed back-bdb attribute index tracking (ITS#2496)
	Documentation
		Misc man page updates

OpenLDAP 2.1.18 Release
	Fixed slapd slave update when updateref missing bug (ITS#2435)
	Fixed slapd SLP reg/dereg bugs (ITS#2438) (ITS#2442)
	Fixed slapd crash on uniqueMember= filter (ITS#2447)
	Fixed slapd subordinate database crash
	Fixed slapd ACL group DN crash (ITS#2467)
	Fixed slapd substring normalization bug (ITS#2468)
	Fixed back-bdb search filter empty value bug (ITS#2453)
	Fixed back-bdb/ldbm filter index computed/undefined bugs (ITS#2449)
	Fixed SASL interactive free bug (ITS#2423)
	Fixed libldap sasl interactive internal error bug (ITS#2475)